--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <style>
+.next-exercise-timer {
+    background-color: #16213e;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: center;
+    border: 1px solid rgba(78, 204, 163, 0.3);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+
+.timer-icon {
+    font-size: 24px;
+    margin-bottom: 5px;
+    animation: pulse 2s infinite;
+}
+
+.timer-text {
+    color: #4ecca3;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.timer-countdown {
+    font-size: 18px;
+    font-weight: bold;
+    color: #e9ecef;
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    100% { transform: scale(1); }
+}
+
+        .urgent-button:disabled {
+            opacity: 0.5; /* Make the button semi-transparent */
+            cursor: not-allowed; /* Change the cursor to indicate it’s not clickable */
+            background-color: #ccc; /* Change the background color to a faded gray */
+            color: #666; /* Change the text color to a lighter shade */
+            border: 1px solid #aaa; /* Add a border to make it look more distinct */
+        }
+
         body {
             width: 350px;
             padding: 20px;
@@ -128,6 +170,12 @@
     </style>
 </head>
 <body>
+    <!-- Popup.html'de <div class="settings-container"> üstüne ekleyin -->
+<div class="next-exercise-timer">
+    <div class="timer-icon">⏳</div>
+    <div class="timer-text">Sonraki egzersize kalan süre:</div>
+    <div class="timer-countdown">Hesaplanıyor...</div>
+</div>
     <div class="settings-container">
         <h2>⚙️ Ayarlar</h2>
         <div class="setting-group">
@@ -142,7 +190,9 @@
         <div class="info-text">
             Değişiklikler bir sonraki moladan itibaren geçerli olacaktır.
         </div>
-
+        <div class="missed-exercises-text">
+            Kaçırılan egzersizler: .
+        </div>
         <div class="recommendations">
             <h3>🎯 Uzman Tavsiyeleri</h3>
             <div class="recommendation-list">
